[gd_scene load_steps=6 format=3 uid="uid://dq5d1iw451jay"]

[ext_resource type="Script" path="res://pop_up.gd" id="1_01pyo"]
[ext_resource type="Shader" path="res://scenes/popup.gdshader" id="1_ag3je"]
[ext_resource type="Shader" path="res://led.gdshader" id="2_ia254"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67bnw"]
shader = ExtResource("1_ag3je")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kof8t"]
resource_local_to_scene = true
shader = ExtResource("2_ia254")

[node name="PopUp" type="Node2D"]
script = ExtResource("1_01pyo")

[node name="img" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_67bnw")
offset_left = -321.0
offset_top = -227.0
offset_right = 327.0
offset_bottom = 15.0

[node name="led1" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 269.0
offset_top = -223.0
offset_right = 319.0
offset_bottom = -173.0

[node name="led2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 192.0
offset_top = -223.0
offset_right = 243.0
offset_bottom = -172.0

[node name="led3" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 120.0
offset_top = -223.0
offset_right = 171.0
offset_bottom = -172.0

[node name="led4" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 48.0
offset_top = -223.0
offset_right = 99.0
offset_bottom = -172.0

[node name="led5" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -24.0
offset_top = -223.0
offset_right = 26.0
offset_bottom = -173.0

[node name="led6" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -96.0
offset_top = -223.0
offset_right = -45.0
offset_bottom = -172.0

[node name="led7" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -168.0
offset_top = -223.0
offset_right = -117.0
offset_bottom = -172.0

[node name="led8" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -240.0
offset_top = -223.0
offset_right = -189.0
offset_bottom = -172.0

[node name="led9" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -307.0
offset_top = -223.0
offset_right = -257.0
offset_bottom = -173.0

[node name="led10" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 268.0
offset_top = -44.0
offset_right = 318.0
offset_bottom = 6.0

[node name="led11" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 196.0
offset_top = -44.0
offset_right = 247.0
offset_bottom = 7.0

[node name="led12" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 124.0
offset_top = -44.0
offset_right = 175.0
offset_bottom = 7.0

[node name="led13" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 52.0
offset_top = -44.0
offset_right = 103.0
offset_bottom = 7.0

[node name="led14" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -20.0
offset_top = -44.0
offset_right = 30.0
offset_bottom = 6.0

[node name="led15" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -92.0
offset_top = -44.0
offset_right = -41.0
offset_bottom = 7.0

[node name="led16" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -164.0
offset_top = -44.0
offset_right = -113.0
offset_bottom = 7.0

[node name="led17" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -236.0
offset_top = -44.0
offset_right = -185.0
offset_bottom = 7.0

[node name="led18" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -309.0
offset_top = -44.0
offset_right = -259.0
offset_bottom = 6.0

[node name="led19" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -309.0
offset_top = -106.0
offset_right = -258.0
offset_bottom = -55.0

[node name="led20" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = -309.0
offset_top = -165.0
offset_right = -258.0
offset_bottom = -114.0

[node name="led21" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 268.0
offset_top = -106.0
offset_right = 319.0
offset_bottom = -55.0

[node name="led22" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kof8t")
offset_left = 268.0
offset_top = -165.0
offset_right = 319.0
offset_bottom = -114.0
